fixed the width of up/down helper buttons for mobile data css: minor changes data js: minor bugs in filtering, changes to support switching from buttons to font awesome icons custom double click functionality only for editable columns added support for changing column order; fixed bugs in the process; still need to add support for changing column names; user added plants - fixed the bug where the last plant was not showing up data html: removed mouse down and touch down -> click support instead

--- a/css/data.css
+++ b/css/data.css
@@ -1,4 +1,3 @@
-/********** v.8.0.0 **********/
 /*to prevent zoom in safari and chrome, font-size has to be at least 16*/
 /********** database page styles **********/
 
@@ -53,7 +52,7 @@ body {
 }
 
 .btnUpdatePlant {
-  top: 1em;
+  top: 2px;
 }
 
 /* icons within table headers - eye */
@@ -149,6 +148,7 @@ th:nth-child(1){
   z-index: 2;
   width: 25vw;
   padding: 0 0 0 0.3em;
+  text-align: center;
 }
 
 .filterInput {
@@ -261,7 +261,7 @@ textarea {
 }
 #dropColNames, .dropUnqVals, #dropExportImport {
   z-index: 7;
-  max-height: 30em;
+  max-height: 15em;
   overflow: auto;
 /*   added on 9/24/20 for iPad scroll support */
   -webkit-overflow-scrolling: auto;
